cs122b-project1-api-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx # Specifies that this Ingress resource should be handled by the nginx Ingress controller.
    nginx.ingress.kubernetes.io/affinity: "cookie" # # Enables session affinity based on cookies, ensuring requests from the same client are routed to the same backend.
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet" # Sets the name of the session cookie used for maintaining session affinity.
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800" # Specifies the expiration time of the session cookie in seconds (172800 seconds = 2 days).
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800" # Sets the maximum age of the session cookie in seconds, aligning with the expiration time.
  name: fablix-ingress # Name of the Ingress resource.
  namespace: default # Namespace where the Ingress resource is created.
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fablix-service # Name of the Service resource that the Ingress routes traffic to.
                port:
                  number: 8080 # Port number of the Service resource.
            path: / # Path that the Ingress routes traffic to.
            pathType: Prefix # Type of path matching. Prefix matches the URL path prefix, and Exact matches the URL path exactly.
